packages/server/src/grammar/lib/epScriptParser.ts
// Generated from epScriptParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { epScriptParserListener } from "./epScriptParserListener";
import { epScriptParserVisitor } from "./epScriptParserVisitor";


export class epScriptParser extends Parser {
	public static readonly BooleanLiterl = 1;
	public static readonly DecimalLiteral = 2;
	public static readonly HexIntegerLiteral = 3;
	public static readonly BinaryLiteral = 4;
	public static readonly OpenBracket = 5;
	public static readonly CloseBracket = 6;
	public static readonly OpenParen = 7;
	public static readonly CloseParen = 8;
	public static readonly OpenBrace = 9;
	public static readonly CloseBrace = 10;
	public static readonly Dot = 11;
	public static readonly QuestionMark = 12;
	public static readonly Comma = 13;
	public static readonly Colon = 14;
	public static readonly SemiColon = 15;
	public static readonly PlusPlus = 16;
	public static readonly MinusMinus = 17;
	public static readonly PlusAssign = 18;
	public static readonly MinusAssign = 19;
	public static readonly MultiplyAssign = 20;
	public static readonly LeftShiftArithmeticAssign = 21;
	public static readonly RightShiftArithmeticAssign = 22;
	public static readonly BitAndAssign = 23;
	public static readonly BitXorAssign = 24;
	public static readonly BitOrAssign = 25;
	public static readonly And = 26;
	public static readonly Or = 27;
	public static readonly LeftShiftArithmetic = 28;
	public static readonly RightShiftArithmetic = 29;
	public static readonly BitNot = 30;
	public static readonly BitAnd = 31;
	public static readonly BitOr = 32;
	public static readonly BitXOr = 33;
	public static readonly Equals = 34;
	public static readonly LessThanEquals = 35;
	public static readonly GreaterThanEquals = 36;
	public static readonly LessThan = 37;
	public static readonly MoreThan = 38;
	public static readonly NotEquals = 39;
	public static readonly Not = 40;
	public static readonly Plus = 41;
	public static readonly Minus = 42;
	public static readonly Multiply = 43;
	public static readonly Divide = 44;
	public static readonly Modulus = 45;
	public static readonly Assign = 46;
	public static readonly Import = 47;
	public static readonly As = 48;
	public static readonly Var = 49;
	public static readonly Const = 50;
	public static readonly Static = 51;
	public static readonly Function = 52;
	public static readonly Object = 53;
	public static readonly L2V = 54;
	public static readonly Once = 55;
	public static readonly If = 56;
	public static readonly Else = 57;
	public static readonly For = 58;
	public static readonly Foreach = 59;
	public static readonly While = 60;
	public static readonly Break = 61;
	public static readonly Continue = 62;
	public static readonly Return = 63;
	public static readonly Switch = 64;
	public static readonly Epdswitch = 65;
	public static readonly Case = 66;
	public static readonly Default = 67;
	public static readonly This = 68;
	public static readonly Identifier = 69;
	public static readonly StringLiteral = 70;
	public static readonly WhiteSpaces = 71;
	public static readonly LineTerminator = 72;
	public static readonly DocComment = 73;
	public static readonly MultiLineComment = 74;
	public static readonly SingleLineComment = 75;
	public static readonly UnexpectedCharacter = 76;
	public static readonly DoubleStringCharacter = 77;
	public static readonly SingleStringCharacter = 78;
	public static readonly RULE_program = 0;
	public static readonly RULE_sourceElement = 1;
	public static readonly RULE_statement = 2;
	public static readonly RULE_block = 3;
	public static readonly RULE_statementList = 4;
	public static readonly RULE_importStatement = 5;
	public static readonly RULE_dottedName = 6;
	public static readonly RULE_importNamespace = 7;
	public static readonly RULE_variableStatement = 8;
	public static readonly RULE_typedAssignable = 9;
	public static readonly RULE_variableDeclarationList = 10;
	public static readonly RULE_variableDeclaration = 11;
	public static readonly RULE_emptyStatement = 12;
	public static readonly RULE_assignAble = 13;
	public static readonly RULE_expressionStatement = 14;
	public static readonly RULE_varModifier = 15;
	public static readonly RULE_ifStatement = 16;
	public static readonly RULE_iterationStatement = 17;
	public static readonly RULE_foreachBlock = 18;
	public static readonly RULE_onceStatement = 19;
	public static readonly RULE_continueStatement = 20;
	public static readonly RULE_breakStatement = 21;
	public static readonly RULE_returnStatement = 22;
	public static readonly RULE_switchStatement = 23;
	public static readonly RULE_caseBlock = 24;
	public static readonly RULE_caseClauses = 25;
	public static readonly RULE_caseClause = 26;
	public static readonly RULE_defaultClause = 27;
	public static readonly RULE_objectDeclaration = 28;
	public static readonly RULE_objectTail = 29;
	public static readonly RULE_objectElement = 30;
	public static readonly RULE_objectVariableDeclaration = 31;
	public static readonly RULE_typeAnnotation = 32;
	public static readonly RULE_functionDeclaration = 33;
	public static readonly RULE_formalParameterList = 34;
	public static readonly RULE_formalParameterArg = 35;
	public static readonly RULE_functionBody = 36;
	public static readonly RULE_functionDefine = 37;
	public static readonly RULE_sourceElements = 38;
	public static readonly RULE_arrayLiteral = 39;
	public static readonly RULE_elementList = 40;
	public static readonly RULE_arrayElement = 41;
	public static readonly RULE_arguments = 42;
	public static readonly RULE_argumentList = 43;
	public static readonly RULE_argument = 44;
	public static readonly RULE_expressionSequence = 45;
	public static readonly RULE_singleExpression = 46;
	public static readonly RULE_anonymosuFunction = 47;
	public static readonly RULE_postfixOperator = 48;
	public static readonly RULE_prefixOperator = 49;
	public static readonly RULE_binaryOperator = 50;
	public static readonly RULE_numericLiteral = 51;
	public static readonly RULE_identifierName = 52;
	public static readonly RULE_identifier = 53;
	public static readonly RULE_reservedWord = 54;
	public static readonly RULE_keyword = 55;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "sourceElement", "statement", "block", "statementList", "importStatement", 
		"dottedName", "importNamespace", "variableStatement", "typedAssignable", 
		"variableDeclarationList", "variableDeclaration", "emptyStatement", "assignAble", 
		"expressionStatement", "varModifier", "ifStatement", "iterationStatement", 
		"foreachBlock", "onceStatement", "continueStatement", "breakStatement", 
		"returnStatement", "switchStatement", "caseBlock", "caseClauses", "caseClause", 
		"defaultClause", "objectDeclaration", "objectTail", "objectElement", "objectVariableDeclaration", 
		"typeAnnotation", "functionDeclaration", "formalParameterList", "formalParameterArg", 
		"functionBody", "functionDefine", "sourceElements", "arrayLiteral", "elementList", 
		"arrayElement", "arguments", "argumentList", "argument", "expressionSequence", 
		"singleExpression", "anonymosuFunction", "postfixOperator", "prefixOperator", 
		"binaryOperator", "numericLiteral", "identifierName", "identifier", "reservedWord", 
		"keyword",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, "'['", "']'", "'('", 
		"')'", "'{'", "'}'", "'.'", "'?'", "','", "':'", "';'", "'++'", "'--'", 
		"'+='", "'-='", "'*='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'&&'", 
		"'||'", "'<<'", "'>>'", "'~'", "'&'", "'|'", "'^'", "'=='", "'<='", "'>='", 
		"'<'", "'>'", "'!='", "'!'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
		"'import'", "'as'", "'var'", "'const'", "'static'", "'function'", "'object'", 
		"'l2v'", "'once'", "'if'", "'else'", "'for'", "'foreach'", "'while'", 
		"'break'", "'continue'", "'return'", "'switch'", "'epdswitch'", "'case'", 
		"'default'", "'this'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "BooleanLiterl", "DecimalLiteral", "HexIntegerLiteral", "BinaryLiteral", 
		"OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
		"CloseBrace", "Dot", "QuestionMark", "Comma", "Colon", "SemiColon", "PlusPlus", 
		"MinusMinus", "PlusAssign", "MinusAssign", "MultiplyAssign", "LeftShiftArithmeticAssign", 
		"RightShiftArithmeticAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", 
		"And", "Or", "LeftShiftArithmetic", "RightShiftArithmetic", "BitNot", 
		"BitAnd", "BitOr", "BitXOr", "Equals", "LessThanEquals", "GreaterThanEquals", 
		"LessThan", "MoreThan", "NotEquals", "Not", "Plus", "Minus", "Multiply", 
		"Divide", "Modulus", "Assign", "Import", "As", "Var", "Const", "Static", 
		"Function", "Object", "L2V", "Once", "If", "Else", "For", "Foreach", "While", 
		"Break", "Continue", "Return", "Switch", "Epdswitch", "Case", "Default", 
		"This", "Identifier", "StringLiteral", "WhiteSpaces", "LineTerminator", 
		"DocComment", "MultiLineComment", "SingleLineComment", "UnexpectedCharacter", 
		"DoubleStringCharacter", "SingleStringCharacter",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(epScriptParser._LITERAL_NAMES, epScriptParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return epScriptParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "epScriptParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return epScriptParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return epScriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(epScriptParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, epScriptParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << epScriptParser.BooleanLiterl) | (1 << epScriptParser.DecimalLiteral) | (1 << epScriptParser.HexIntegerLiteral) | (1 << epScriptParser.BinaryLiteral) | (1 << epScriptParser.OpenBracket) | (1 << epScriptParser.OpenParen) | (1 << epScriptParser.OpenBrace) | (1 << epScriptParser.SemiColon) | (1 << epScriptParser.PlusPlus) | (1 << epScriptParser.MinusMinus) | (1 << epScriptParser.BitNot))) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & ((1 << (epScriptParser.Not - 40)) | (1 << (epScriptParser.Plus - 40)) | (1 << (epScriptParser.Minus - 40)) | (1 << (epScriptParser.Import - 40)) | (1 << (epScriptParser.Var - 40)) | (1 << (epScriptParser.Const - 40)) | (1 << (epScriptParser.Static - 40)) | (1 << (epScriptParser.Function - 40)) | (1 << (epScriptParser.Object - 40)) | (1 << (epScriptParser.Once - 40)) | (1 << (epScriptParser.If - 40)) | (1 << (epScriptParser.For - 40)) | (1 << (epScriptParser.Foreach - 40)) | (1 << (epScriptParser.While - 40)) | (1 << (epScriptParser.Break - 40)) | (1 << (epScriptParser.Continue - 40)) | (1 << (epScriptParser.Return - 40)) | (1 << (epScriptParser.Switch - 40)) | (1 << (epScriptParser.Epdswitch - 40)) | (1 << (epScriptParser.This - 40)) | (1 << (epScriptParser.Identifier - 40)) | (1 << (epScriptParser.StringLiteral - 40)))) !== 0)) {
				{
				this.state = 112;
				this.sourceElements();
				}
			}

			this.state = 115;
			this.match(epScriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sourceElement(): SourceElementContext {
		let _localctx: SourceElementContext = new SourceElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, epScriptParser.RULE_sourceElement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, epScriptParser.RULE_statement);
		try {
			this.state = 133;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 119;
				this.block();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 120;
				this.importStatement();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 121;
				this.emptyStatement();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 122;
				this.variableStatement();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 123;
				this.ifStatement();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 124;
				this.iterationStatement();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 125;
				this.switchStatement();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 126;
				this.onceStatement();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 127;
				this.continueStatement();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 128;
				this.breakStatement();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 129;
				this.returnStatement();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 130;
				this.objectDeclaration();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 131;
				this.functionDeclaration();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 132;
				this.expressionStatement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, epScriptParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 135;
			this.match(epScriptParser.OpenBrace);
			this.state = 137;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << epScriptParser.BooleanLiterl) | (1 << epScriptParser.DecimalLiteral) | (1 << epScriptParser.HexIntegerLiteral) | (1 << epScriptParser.BinaryLiteral) | (1 << epScriptParser.OpenBracket) | (1 << epScriptParser.OpenParen) | (1 << epScriptParser.OpenBrace) | (1 << epScriptParser.SemiColon) | (1 << epScriptParser.PlusPlus) | (1 << epScriptParser.MinusMinus) | (1 << epScriptParser.BitNot))) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & ((1 << (epScriptParser.Not - 40)) | (1 << (epScriptParser.Plus - 40)) | (1 << (epScriptParser.Minus - 40)) | (1 << (epScriptParser.Import - 40)) | (1 << (epScriptParser.Var - 40)) | (1 << (epScriptParser.Const - 40)) | (1 << (epScriptParser.Static - 40)) | (1 << (epScriptParser.Function - 40)) | (1 << (epScriptParser.Object - 40)) | (1 << (epScriptParser.Once - 40)) | (1 << (epScriptParser.If - 40)) | (1 << (epScriptParser.For - 40)) | (1 << (epScriptParser.Foreach - 40)) | (1 << (epScriptParser.While - 40)) | (1 << (epScriptParser.Break - 40)) | (1 << (epScriptParser.Continue - 40)) | (1 << (epScriptParser.Return - 40)) | (1 << (epScriptParser.Switch - 40)) | (1 << (epScriptParser.Epdswitch - 40)) | (1 << (epScriptParser.This - 40)) | (1 << (epScriptParser.Identifier - 40)) | (1 << (epScriptParser.StringLiteral - 40)))) !== 0)) {
				{
				this.state = 136;
				this.statementList();
				}
			}

			this.state = 139;
			this.match(epScriptParser.CloseBrace);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statementList(): StatementListContext {
		let _localctx: StatementListContext = new StatementListContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, epScriptParser.RULE_statementList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 141;
				this.statement();
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << epScriptParser.BooleanLiterl) | (1 << epScriptParser.DecimalLiteral) | (1 << epScriptParser.HexIntegerLiteral) | (1 << epScriptParser.BinaryLiteral) | (1 << epScriptParser.OpenBracket) | (1 << epScriptParser.OpenParen) | (1 << epScriptParser.OpenBrace) | (1 << epScriptParser.SemiColon) | (1 << epScriptParser.PlusPlus) | (1 << epScriptParser.MinusMinus) | (1 << epScriptParser.BitNot))) !== 0) || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & ((1 << (epScriptParser.Not - 40)) | (1 << (epScriptParser.Plus - 40)) | (1 << (epScriptParser.Minus - 40)) | (1 << (epScriptParser.Import - 40)) | (1 << (epScriptParser.Var - 40)) | (1 << (epScriptParser.Const - 40)) | (1 << (epScriptParser.Static - 40)) | (1 << (epScriptParser.Function - 40)) | (1 << (epScriptParser.Object - 40)) | (1 << (epScriptParser.Once - 40)) | (1 << (epScriptParser.If - 40)) | (1 << (epScriptParser.For - 40)) | (1 << (epScriptParser.Foreach - 40)) | (1 << (epScriptParser.While - 40)) | (1 << (epScriptParser.Break - 40)) | (1 << (epScriptParser.Continue - 40)) | (1 << (epScriptParser.Return - 40)) | (1 << (epScriptParser.Switch - 40)) | (1 << (epScriptParser.Epdswitch - 40)) | (1 << (epScriptParser.This - 40)) | (1 << (epScriptParser.Identifier - 40)) | (1 << (epScriptParser.StringLiteral - 40)))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importStatement(): ImportStatementContext {
		let _localctx: ImportStatementContext = new ImportStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, epScriptParser.RULE_importStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 146;
			this.match(epScriptParser.Import);
			this.state = 147;
			this.dottedName(0);
			this.state = 149;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === epScriptParser.As) {
				{
				this.state = 148;
				this.importNamespace();
				}
			}

			this.state = 151;
			this.match(epScriptParser.SemiColon);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public dottedName(): DottedNameContext;
	public dottedName(_p: number): DottedNameContext;
	// @RuleVersion(0)
	public dottedName(_p?: number): DottedNameContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: DottedNameContext = new DottedNameContext(this._ctx, _parentState);
		let _prevctx: DottedNameContext = _localctx;
		let _startState: number = 12;
		this.enterRecursionRule(_localctx, 12, epScriptParser.RULE_dottedName, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 154;
			this.identifier();
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 161;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new DottedNameContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, epScriptParser.RULE_dottedName);
					this.state = 156;
					if (!(this.precpred(this._ctx, 2))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
					}
					this.state = 157;
					this.match(epScriptParser.Dot);
					this.state = 158;
					this.identifier();
					}
					}
				}
				this.state = 163;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importNamespace(): ImportNamespaceContext {
		let _localctx: ImportNamespaceContext = new ImportNamespaceContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, epScriptParser.RULE_importNamespace);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this.match(epScriptParser.As);
			this.state = 165;
			this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableStatement(): VariableStatementContext {
		let _localctx: VariableStatementContext = new VariableStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, epScriptParser.RULE_variableStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 167;
			this.variableDeclarationList();
			this.state = 168;
			this.match(epScriptParser.SemiColon);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typedAssignable(): TypedAssignableContext {
		let _localctx: TypedAssignableContext = new TypedAssignableContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, epScriptParser.RULE_typedAssignable);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 170;
			this.assignAble();
			this.state = 172;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === epScriptParser.Colon) {
				{
				this.state = 171;
				this.typeAnnotation();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclarationList(): VariableDeclarationListContext {
		let _localctx: VariableDeclarationListContext = new VariableDeclarationListContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, epScriptParser.RULE_variableDeclarationList);
		let _la: number;
		try {
			this.state = 207;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				_localctx = new VariableDefineListContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 175;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === epScriptParser.Static) {
					{
					this.state = 174;
					this.match(epScriptParser.Static);
					}
				}
